5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1826_1647.log
== TEST (2019-06-12 18:11:11) 
-- CODE:
from numpy import *

v=array(eval(input()))
a=0
for i in range(v):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:11:43) 
-- CODE:
from numpy import *

v=array(eval(input()))
a=0
for (i in range(v)):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 5
    for (i in range(v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:04) 
-- CODE:
from numpy import *

v=array(eval(input()))
a=0
for (i in range(size(v))):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 5
    for (i in range(size(v))):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:29) 
-- CODE:
from numpy import *

v=array(eval(input()))
a=0
for (i in range(v):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 5
    for (i in range(v):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:13:30) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:13:31) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y):
	if (v[i]>=70):
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:13:59) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:00) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:21) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:32) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:33) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:34) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:34) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:34) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for (i in range(0,y)):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
File "XXXX", line 6
    for (i in range(0,y)):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:44) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:15:13) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:22:14) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=0:
		print(v[p])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:22:58) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:23:52) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1
print(a)
for p in range(0,y):
	if v[p]>=70:
		print(v[p])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:11) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print(a)
print(v[p])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:32) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print(a)
print(v[p])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:11) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
print(a)
print(v[p])
	
-- ERROR:
File "XXXX", line 12
    print(a)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:27:05) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(z[v])

-- ERROR:
File "XXXX", line 6
    z=(y, dtype=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:27:28) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(z[v])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:08) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print([v[1],v[2],v[3]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:22) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print([v[0],v[1],v[2]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:43) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print([v[0],v[1],v[2]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:43) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(v[p])
print([v[0],v[1],v[2]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:08) 
-- CODE:
from numpy import *

v=array(eval(input()))
y=size(v)
a=0
z=zeros(y, dtype=int)
for i in range(0,y):
	if v[i]>=70:
		a=a+1

for p in range(0,y):
	if v[p]>=70:
		print(z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
